@@ -1,12 +1,15 @@
 <span tal:define="size size|field.widget.size;
                   css_class css_class|field.widget.css_class;
                   name name|field.name;
-                  oid oid|field.oid;"
+                  oid oid|field.oid;
+                  style style|field.widget.style|None"
       tal:omit-tag="">
     <input type="date"
            name="${name}"
            value="${cstruct}"
-           tal:attributes="size size; class css_class"
+           tal:attributes="size size; 
+                           class css_class;
+                           style style"
            id="${oid}"/>
     <script type="text/javascript">
       deform.addCallback(
