@@ -1,5 +1,6 @@
 <input type="password" name="${name|field.name}" value="${cstruct}" 
        tal:attributes="size size|field.widget.size;
-                       class css_class|field.widget.css_class"
+                       class css_class|field.widget.css_class;
+                       style style|field.widget.style|None"
        id="${oid|field.oid}"/>
 
